--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <title>Proyecto Final</title>
-</head>
+  </head>
 <body>
-
-<h1>Proyecto Biografia</h1>
+<h1>Proyecto Biografia</h1
+  <p>Proycto de Final </p>
+ <img src="https://cdn.pixabay.com/photo/2016/07/19/04/40/moon-1527501_1280.jpg"> 
+  
 <p>By Camila.</p>
-
 </body>
 </html>
