--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 <title>Proyecto Final</title>
   </head>
-<body>
-<h1>Proyecto Biografia</h1
+<body style="background-color:#C2D8E3">
+<h1 style = "color:#DA9EFE;">Proyecto Biografia</h1
   <p>Proycto de Final </p>
  <img src="https://cdn.pixabay.com/photo/2016/07/19/04/40/moon-1527501_1280.jpg"> 
   
 <p>By Camila.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
