--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
 <body style="background-color:#C2D8E3">
 <h1 style = "color:#DA9EFE;">Proyecto Biografia</h1
-  <p>Proycto de Final </p>
- <img src="https://cdn.pixabay.com/photo/2016/07/19/04/40/moon-1527501_1280.jpg"> 
-  
+  <p> Camila Toledo, she is a freshman student at Antigua International school. She is from Antigua, Guatemala and, is currently 14 years old, 5 months, and 24 days. Some remarkable achievements in the past. She was also selected to be standard bearer in her past school. As well as being a volunteer in an animal shelter for about a year. She is a very interesting person who loves to design spaces. Her dream is to work as an interior designer one day. Since she enjoys creating spaces where a lot of memories are can be made. Camila is also interested in saving animals in danger, mostly dogs. She is a person that always speaks her mind, and wont stay quiet. </p>
+ 
+ <img src="https://cdn.pixabay.com/photo/2016/07/19/04/40/moon-1527501_1280.jpg">   
 <p>By Camila.</p>
 </body>
 </html>
